--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
+{% block title %}
+From Today I am going to work hard.
+{% endblock %}
+
+{% block content %}
 <h4>
-    From Today I am going to work hard.
-</h4>
     <p>I was supposed to summarize more papers in order to finish my literature review part.
-         But I was distracted to lear on building personal website. 
+         But I was distracted to learn on building personal website. 
          My previous attempt is to using Heroku but later I find Github is also convenient. 
          It becomes more interesting when you find github provides development mode supporint coding online. 
-         I feel I am now using a fancy notebook (or maybe diary book).<br>
-        
-    Tomorrow is Thanksgiving. Amy invites me to her huge family. She also mentioned she will playing football nearby in the morning. 
-    She knows that I would like to experience full Thanksgiving but she was not sure I was able to get up that early. I am not sure either. 
-        </p>
-
-<p>
-
+         I feel I am now using a fancy notebook (or maybe diary book).</p>
+ 
+<p>   
+    Tomorrow is Thanksgiving. Amy invited me to her huge family. She also mentioned she would play football nearby in the morning. 
+    She knew that I would like to experience full Thanksgiving but she was not sure I was able to get up that early. I am not sure either. It
 </p>
+</h4>
+{% endblock %}
