--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ From Today I am going to work hard.
  
 <p>   
     Tomorrow is Thanksgiving. Amy invited me to her huge family. She also mentioned she would play football nearby in the morning. 
-    She knew that I would like to experience full Thanksgiving but she was not sure I was able to get up that early. I am not sure either. It
+    She knew that I would like to experience full Thanksgiving but she was not sure I was able to get up that early. I am not sure either. 
+    I prepared European cookie collection for the childrens and brought a classcial American chocolate collection for myself. The chocolate is too sweet...
+
 </p>
 </h4>
 {% endblock %}
