--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <h4>
 From Today I am going to work hard.
-</h4
-    <p>I was supposed to summarize more papers in order to finish my literature review part. <br>
-         But I was distracted to learn on building personal website. <br>
-         My previous attempt is to using Heroku but later I find Github is also convenient. <br>
-         It becomes more interesting when you find github provides development mode supporint coding online. <br>
-         I feel I am now using a fancy notebook (or maybe diary book).</p>
+</h4>
+
+<p>Nothing "useful" has been done today...<br>
+    The only progress might be that I learnt the human life is one of suffering(Buddism?) <br>
+    But hope grows up in the aching land. <br>
+    Carry on. Don't give in.
  
 <p>   
-    Tomorrow is Thanksgiving. Amy invited me to her huge family. She also mentioned she would play football nearby in the morning. <br>
-    She knew that I would like to experience full Thanksgiving but she was not sure I was able to get up that early. I am not sure either. <br>
-    I prepared European cookie collection for the childrens and brought a classcial American chocolate collection for myself. The chocolate is too sweet...<br>
+
 
 </p>
 
