--- a/index.html
+++ b/index.html
@@ -7,4 +7,8 @@
         But hope grows up in the aching land. <br>
         Carry on. Don't give in.
     </p>
+
+    <p>试试中文能不能行
+    </p>
+    
     
