--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-
-
+<!DOCTYPE html>
+<html>
+<head>
 <script src="{% static 'NepenthePallas.github.io/js/prev_next_button.js' %}"></script>
 
 <!--<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>-->
@@ -7,13 +8,12 @@
 
 <script src="{% static 'NepenthePallas.github.io/js/highchart.js' %}"></script>
 <script src="{% static 'NepenthePallas.github.io/js/highchart_credit.js' %}"></script>
-{% endblock %}
 
 
-{% block styles %}
+
 <link href="{% static 'NepenthePallas.github.io/css/custom.css' %}" rel="stylesheet">
+</head>
 
-{% endblock %}
 
 
 
@@ -152,7 +152,10 @@
 <button class="nexttab btn-primary btn next">Next</button>
 
 </div>
+  
+  
 
+</html>
 
 
 
