--- a/fun.html
+++ b/fun.html
@@ -78,14 +78,38 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
         <img src="Pictures/Silhouettes.jpg" style="width:100%">
-
       </div>
 
       <div class="w3-half">
         <img src="Pictures/sunset1.jpg" style="width:100%">
+      </div>
+    <!-- End Sunset grid -->
+    </div>
+
+
+
+    <h3 class="w3-padding-16 w3-text-light-grey">Fall</h3>
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half">
+        <img src="Pictures/road.jpg" style="width:100%">
 
       </div>
-    <!-- End photo grid -->
+
+    <!-- End Fall grid -->
+    </div>
+
+
+    <h3 class="w3-padding-16 w3-text-light-grey">Winter</h3>
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half">
+        <img src="Pictures/snow.jpg" style="width:100%">
+
+      </div>
+
+
+    <!-- End Winter grid -->
     </div>
   <!-- End Portfolio Section -->
   </div>
