--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ div.hidden {
   display: none;
 }
 </style>
-</head?
+</head>
 
 
 
@@ -130,6 +130,7 @@ div.hidden {
 
 
 
+
     <h3 class="w3-padding-16 w3-text-light-grey">Substratum</h3>
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
       <div class="w3-quarter w3-section">
@@ -143,6 +144,10 @@ div.hidden {
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">Delusion</span><br>
         Severe
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">Amnesia</span><br>
+        Potential
       </div>
     </div>
 
@@ -169,7 +174,8 @@ div.hidden {
  
   <!-- Reading Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="reading">
-    <h2 class="w3-text-light-grey">Reading and Writing</h2>
+    <h2 class="w3-text-light-grey">
+      <a href="reading.html" style="text-decoration: none">Reading and Writing </a></h2>
     <hr style="width:320px" class="w3-opacity">
     <p> “知止而后又定，定而后能静，静而后能安，安而后能虑，虑而后有得。物又本末，事有终始，知所先后，则近道矣。”<br>
     ——《大学》
@@ -177,17 +183,19 @@ div.hidden {
     <p>（不会说话之前就先摘录吧。）<P>
 
   
-
-
-    <h3 class="w3-padding-16 w3-text-light-grey">Metaphysica</h3>
+    <h3 class="w3-padding-16 w3-text-light-grey">
+    <a href="reading.html#Metaphysica" style="text-decoration:none">Metaphysica, Aristotle</a>
+    </h3>
     <div class="a w3-row w3-padding-16 w3-section w3-light-grey">
-      <h5 style="text-align:center;">卷一</h5>
-      <div style="text-indent:2em; margin: 2px 10mm 1% 2em">
-         <p> 求知是人类的本性。动物可感知现象并产生记忆，少有经验；而人能从经验产生技术。
-           知识属于技术, 智慧则是有关原理和原因的知识。
-           如数学始于埃及僧侣阶级的特许闲暇, 那些不为生活所需，不以快乐为目的知识兴起于有闲暇的地方。</p>
-      </div>
-    
+
+        <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+            <p>Reference</p>
+            <ul>
+                <li>《形而上学》，无寿彭（译），商务印书馆，1981</li>
+                <li><a href=" https://www.jstor.org/stable/j.ctt6wq12z.12" style="text-decoration: none">Metaphysics,  W.D.Ross (tr.),  Princeton University Press,  1928 </a> </li>
+                </ul>
+        </div>
+
       
     </div>
 
