--- a/reading.html
+++ b/reading.html
@@ -13,7 +13,7 @@ div.ind {
 }
 
 /* font face */
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, Serif}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
@@ -75,21 +75,437 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
     <p>（不会说话之前就先摘录吧。）<P>
 
 
-
-
+    <!-- Start Metaphysica -->
+    <div id="Metaphysica">
     <h3 class="w3-padding-16 w3-text-light-grey">Metaphysica</h3>
-    <div class="a w3-row w3-padding-16 w3-section w3-light-grey">
+    <!-- font family-->
+    <div class="a w3-row w3-padding-16 w3-section w3-light-grey" style="font-family: LiSu, Garamond, Serif">
+
+        <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+            <p>Reference</p>
+            <ul>
+                <li>《形而上学》，无寿彭（译），商务印书馆，1981</li>
+                <li><a href=" https://www.jstor.org/stable/j.ctt6wq12z.12" style="text-decoration: none">
+            Metaphysics, W.D.Ross (tr.), Princeton University Press, 1928 </a> </li>
+                </ul>
+        </div>
+
       <h5 style="text-align:center;">卷一</h5>
-      <div style="text-indent:2em; margin: 2px 10mm 1% 2em">
-         <p> 求知是人类的本性。动物可感知现象并产生记忆，少有经验；而人能从经验产生技术。
+      <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+        <p> 求知是人类的本性。动物可感知现象并产生记忆，少有经验；而人能从经验产生技术。
            知识属于技术, 智慧则是有关原理和原因的知识。
-           如数学始于埃及僧侣阶级的特许闲暇, 那些不为生活所需，不以快乐为目的知识兴起于有闲暇的地方。</p>
+           如数学始于埃及僧侣阶级的特许闲暇, 那些不为生活所需，不以快乐为目的知识兴起于有闲暇的地方。
+          人人易得的感觉不算智慧；最普遍的也是最难知的，它们离感觉越远。西蒙尼德(Simonides)：人类的本性实在缧绁(bondage)之中。</p>
+
+        <p>说明事物的基本原因才算知道这事物。
+          原因(causes)有四：形式因(formula)——本体(substance)即怎是(essence),最终的为什么；物质因(matter)——底层(substratum);
+          变化因(source of change);目的因(sake of which)——本善(good)，与动变相对。</p>
+
+        <p>先贤多探求物因，部分探求动因：<br>
+        <table>
+        <tr>
+    <td>Philosopher</td>
+    <td>Matter</td>
+    <td>Change</td>
+    <td>One Entity</td>
+
+  </tr>
+
+  <tr>
+    <td>泰勒斯(Thales)</td>
+    <td>水</td>
+    <td></td>
+    <td></td>
+  </tr>
+
+        <tr>
+    <td>阿纳克西米尼(Anaximenes)</td>
+    <td>气(air)</td>
+    <td></td>
+    <td></td>
+  </tr>
+                <tr>
+    <td>赫拉克利特(Heraclitus)</td>
+    <td>火</td>
+    <td></td>
+    <td></td>
+  </tr>
+
+        <tr>
+    <td>第欧根尼(Diogenes)</td>
+    <td>气(air)</td>
+    <td></td>
+    <td></td>
+  </tr>
+
+        <tr>
+    <td>阿纳克萨哥拉(Anaxagoras)</td>
+    <td>无穷数(infinite in number)</td>
+    <td>理性(reason)</td>
+    <td></td>
+  </tr>
+
+
+        <tr>
+    <td>巴门尼德(Parmenides)</td>
+    <td>物不止一</td>
+    <td></td>
+    <td>是(Being)</td>
+  </tr>
+
+        <tr>
+    <td>希萧特(Hesiod)</td>
+    <td></td>
+    <td>爱欲(love or desire)</td>
+    <td></td>
+  </tr>
+
+        <tr>
+    <td>恩培多克勒(Empedocles)</td>
+    <td>四：土气水火</td>
+    <td>友与斗(friendship and strife)</td>
+    <td></td>
+  </tr>
+        <tr>
+    <td>留基伯(Leucippus)</td>
+    <td>空与实(full and empty)</td>
+    <td></td>
+    <td></td>
+  </tr>
+
+        <tr>
+    <td>德谟克里特(Democritus)</td>
+    <td>空与实(full and empty)</td>
+    <td></td>
+    <td></td>
+  </tr>
+
+        <tr>
+    <td>毕达哥拉斯(Pythagoreans)</td>
+    <td>数(numbers)</td>
+    <td></td>
+    <td>数(Mathematics)</td>
+  </tr>
+
+        <tr>
+    <td>柏拉图(Plato)</td>
+    <td></td>
+    <td></td>
+    <td>意式(Ideas)</td>
+  </tr>
+
+</table>
+        </p>
+
+        <p></p>
+
+      </div>
+
+      <h5 style="text-align:center;">卷二</h5>
+      <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+         <p> 有理性的人总是符合于一个目的而后有所作为，此为定限(limit)或终极(end)。</p>
       </div>
 
 
+
+      <h5 style="text-align:center;">卷三</h5>
+      <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+        <p>综合实体(Thing):物质连同其指谓(predicated)；</p>
+
+        <p>房屋的四因：动因为建筑师或建筑术；极因为其作用；物因为土石；形式因为房屋的定义。最高的因是基因，万物归于终极复于本善。万物不能无中生有，凡动变必有目的。</p>
+
+      </div>
+
+
+
+      <h5 style="text-align:center;">卷四</h5>
+      <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+        <p>形而上学研究实是(being)之所以为实是以及其由于本性(nature)而应有的属性(attributes)。是(be)有多种含义：是本体；是本体的演变；是完成本体的过程；是本体的缺失；是本体相关的事物等。哲学是本体之学。</p>
+
+        <p>每门学术研究事物的某一级或某一类感觉(perception)，研究任务是对反(opposite)。众多(plurality)对于元一(unity)。形而上学研究元一的否定(negation)与阙失(privation)。</p>
+
+        <p>对一切事物予以证明是不可能的，因无尽追溯必有残余。矛盾律是最不证自明的。</p>
+
+        <p>属性皆偶然，属性无限种，本体是唯一最主要的属性。</p>
+
+
+      </div>
+
+
+      <h5 style="text-align:center;">卷五</h5>
+      <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+        <p>被称为本体的事物不为别的主题(subject)为云谓(predicated)，而有别的事物作其云谓。本体是最底层，是这个(this)。</p>
+
+        <p>本体为一即相同(same)；质量(quality)为一即相似(like);数量(quantity)为一即相等(equal)。</p>
+
+
+
+      </div>
+
+
+      <h5 style="text-align:center;">卷六</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p> 如谓一切思想必为实用、制造与理论三者之一，则物理学、数学、哲学为理论学术：
+           物理学理论的是动变的事物；
+         数学的研究对象是否不变动而脱离物质还不得而知，但有些定理是先假定数理对象不变动而脱离事物，某些部门研究不动变但不能脱离物质之物；
+         第一哲学研究世间如若存在的不动变本体，其赋予一切原因以永恒性，似“神”的作用。</p>
+        <p>实是(being)之偶然：偶然是诡辩派的论题，不能成为科学研究。偶然事物的生灭不似现存事物有过程，其原因是出乎常然的。
+          偶然是必定存在的，因为世间大部分事物只是大多数如此而已。
+        </p>
+        <p>
+          没有生灭过程而生灭的原理与原因是有的，否则万物尽成必然，现在由过去决定且可决定未来，这与每一时刻存在的偶然和不确定性矛盾。
+        </p>
+        <p>
+          实是(being)之真假：真假是逻辑关于组合的析离判断：肯定主题和云谓相合、否定两者相离为真；反之为假。
+        </p>
+      </div>
+
+
+            <h5 style="text-align:center;">卷七</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p> 本体 (substance) 较之范畴先于时间，先于定义，并为事物认识次序之始。
+           米利都和埃利亚学派认为实体只一；毕达哥拉斯学派和恩培多克勒认为数有定限。</p>
+        <p>  一般人认为实物是本体；毕达哥拉斯学派认为实物之外限（面、线、点、单位）相较实物应更为本体。
+          柏拉图、斯泮雪浦、奇诺克拉底重超物质本体。
+          希波、伊比鸠鲁重可感觉本体。
+        </p>
+        <p>
+          除常见的怎是、普遍、科属，底层也是本体。底层以一切事物做云谓/范畴，却不为其它事物的云谓，是最真切的本体。
+          物质不是本体，因本体需要独立性和个别性；物质和通式的组合不是本体，因组合后于通式而本体要求先于时间；
+        </p>
+        <p>
+          修学的程序是经由个别感觉经验所易识的小节，试求宇宙不易的大义。
+          “是”的初级原义属于本体，其次命意属于其他范畴，诡辩利用“是”的双关，如“凡所不知也是知”。
+        </p>
+        <p>
+          只有本体可作定义。定义是怎是的公式，而怎是唯一地、主要地、基本地属于本本体。
+        </p>
+        <p>
+          由己事物(Self-subsistent thing) 如善、美，自足于己，不依赖于其它事物，没有其它本体或实是先于它。
+          若意式(Ideas)先于本体,则意式无从认识，而本体没有实是。
+          事物自身与其本体实际和一。
+        </p>
+
+        <p>
+          事物(thing)由自然、技术或者自发所成，有其所由来、创造者，和所成就。
+          自然事物（如人草木）由自然创造，从物质来，成就为自然万物，自然万物具有自然本性，虽物质不同，但通式相同（人既而为人）。
+        </p>
+
+        <p>每一制品均将成为可区分的两部分，物质和通式。通式不需成为自存本体。通式不需成为典型（柏拉图的意式）。
+          人与人因物质不同而各自成为“这个”(this)，但他们的形式是不可区分的。</p>
+
+         <p>在综合论法(deduction)中，怎是为一切事物的七点。在本体上，形式不产生形式。铜在为成为铜球之前也是一综合实体。
+         本体之特性在于必须先有一已经完全实现的另一个本体为之父母，如人；而质量则不需要另一质量，只要先有所潜在即可。</p>
+
+        <p>综合实体(thing)，如“这个圆”，没有定义，只能凭思想或感觉来认识；当它们从完全的现实消失后就不知其或存或亡。
+        </p>
+
+        <p>灵魂是原始本体，身躯是物质，人与动物是两者的结合。
+        </p>
+
+        <p>定义是包含诸差异的公式，或者按照真确的分类方法，即是最末一差异。
+        </p>
+
+        <p>本体不作一个主题的云谓(predication)，而普遍性则常作为某些主题的云谓。普遍性不是下一级事物的本体（人和马），却是自己的本体（动物）。
+          本体不能由若干个完全实现的本体来组合。假若本体为一，这不能是若干本体所组成。德谟克里特：一物不能由两物制出来。
+        </p>
+
+        <p>
+          本体有综合实体与公式两类。作为综合实体的本体可以灭坏与生成，而公式无生灭。可感觉的个体本体不可能有定义也不会有证明。
+          意式（Idea)按照意式论者为可以独立自存的个体，则这是无法定义的；若又可以参与很多事物（以一统多），则这需要诸意式的组合，那么每个意式就只能代表一种事物。
+        </p>
+
+        <p>
+          实是(being)与元一(unity)较之于原理、要素或原因为切于本体，但仍旧不是本体，因为本体只属于自己，凡共通性均不是本体。
+          普遍性显然不能离开个体自存。</p>
+
+        <p>
+          问一事物何以谓之自身，是无意义的问题，因为提出一个怎么，事物的存在与其真相就已经明显暴露了：肯定事物存在才提出这个问题。
+          事物不能从自身分离，它之所以成为一个这个(this)因为他就是这个(this)。
+          在成灭事物上，，所求当为动因，而与事物存在的问题上，则应求其极因。
+        </p>
+
+
+      </div>
+
+
+      <h5 style="text-align:center;">卷八</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>可感觉的本体均有物质。</p>
+
+        <p>可感觉本体怎样存在——为物质，为形式或实现(actuality),为两者结合。</p>
+
+        <p>灵魂与成为灵魂相同，而人和成为人不同（人是可感觉本体）。</p>
+
+        <p>人的四因——material cause:menstrual fluid; moving cause: semen; formal cause: his essence; final cause: the end.</p>
+
+        <p>只有可生灭的事物具有物质。
+          至于一切非物质事物原都是全称元一(All things which have no matter are without qualification essentially unities)。</p>
+
+
+      </div>
+
+
+
+
+      <h5 style="text-align:center;">卷九</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>事物之能指自己能被作用或作用于它事物。</p>
+
+        <p>具有理知(reason)的能力可起对反作用(effect)，无理知只能有一种作用。如医疗可以使人健康或疾病，而热之作用于热。</p>
+
+        <p>麦加拉学派(Megaric school, 苏格拉底支派),错误的认为事物之能只在作用的时候，忽略了潜在。
+          实现(Actuality)严格解释限于动作，而完全实现(Fulfillment)指的是实际存在。</p>
+
+        <p>无限(Infinity)虽在潜能上有存在，但并不以实现为依托。
+          有限的动作(action)可以分为时刻进行没有抵达的运动(movement)如学习、建筑，以及过程和结果同一的实现(actuality)如看（看见），想（想到）。</p>
+
+        <p>实现(Actuality)先于潜能（potentiality)：实现先于公式——认识潜能之前必先认识实现的公式；
+          实现在时间上为先——总有一原动者(first mover)，原先已实现得存在(exists actually)；
+          实现在本体上为先——事物得目的是其成为原理得原因，且创造以终极为目的，而实现为其终极。
+          有产品的动作，其实现归于产品，如建筑工作的实现归建筑物；无产品的动作，实现归于主动者，如幸福生活的实现归于灵魂，因为幸福也是某一类生活。
+          本体(substance)或形式(form)为实现。按照时间追溯，有一个永在原动者之实现(actuality of eternal prime mover)。
+          永在事物(eternal things)的存在均为实现存在，必然性(necessity)的事物是基本事物(primary things)，没有这些一切将不会存在，而必然事物的存在没有偶然性。
+          可生灭事物（perishable things)活动伴随的物质和潜能都有相对的因素，因此是费力的(laborious)，而永在事物的运动出于实现，不费力。
+          地球与或效仿者不灭坏事物永恒活动。实现先于潜能和一切动变原理。</p>
+
+        <p>潜能同时有对反，但相反亮相不能同时存在。潜能无所偏于两者时，善只是其中一端，因此实现善端教善为更善，恶亦然。恶离不开恶的事物。
+          原始永在事物没有恶(bad)，没有缺点(defective)，没有偏斜(perversion)。</p>
+
+        <p>真实(Truth)是接触(contact)和证实(assertion)（与肯定(affirmation)不同)。不接触就是不认识。
+          怎是(essence)与实现(actuality)没有假，问题只在于可能不认识。判断(Judgement)可以为对或错，事实却是永恒的。</p>
+
+
+      </div>
+
+
+
+      <h5 style="text-align:center;">卷十</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>成为一(One)就是成为不可区分。一是事物的尺度(measure)。普罗塔格拉(Protagoras)“人是万物的尺度”的意思是人凭理知和感觉计量事物。</p>
+
+        <p>毕达哥拉斯学派(Pythagoreans)认为一是本体但普遍性均不能成为本体；
+          从物的层面看，自然哲学家如恩培多克勒以一为友、爱，阿纳克西米尼以一为气，阿纳克萨哥拉以一为未定，但这些不同的本体无需合并为普遍。
+          确定为一的事物在本性上不是元一(unity)，元一与实是同。</p>
+
+        <p>一与多为对反(opposite):一不可能区分而多可区分；由于多的可以区分而更易认识，多在定义上先于一；一作为单位，而多为可计量的事物。
+          这一对反不因矛盾(contrary)，而由于相关(relative)。知识以可知事物为单位。</p>
+
+        <p>相异者必须在公认的相同方面求其异。最大的差异为相对(contrary,或矛盾)。异于科属因距离太远而无法比拟；差异只在科属内。</p>
+
+        <p>“等”非大非小，为一间体(intermediate)。间体与其所由是事物属同一科属、在组成之间、并由组成复合而来。</p>
+
+        <p>对反(contrary)别于形式，可灭坏事物和不可灭坏事物是对反，故不同种(different in kind)。所以通式(Form)不能有。</p>
+
+      </div>
+
+
+      <h5 style="text-align:center;">卷十一</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>智慧是第一原理的学术。第一原理并不对反。不灭坏的本体或特殊原理是大部分有造诣的思想家当作实是(being)而一致追索的。
+          哲学家专注于一般实是，重视通则。</p>
+
+        <p>同一事物不能既是又不是，虽然没有完全的普遍实证（完全实证必须找到更确切的包含它的真理），但找不出更确实的真理。
+          凡物必出于物为自然哲学家所公认。不同的意见或印象源于感觉，实际事物不变而人感觉到的千差万别（如甜苦，美丑，爱恶）。
+          物本身不变。探索真理须以不变的常态事物为始。怀疑一切的人破坏了所有理解，无法进行讨论。</p>
+
+        <p>独立存在而不变动的本体若存于世间，就该是神之所在而成为第一个最基本的原理。神学在研究对象上优于一切学术。</p>
+
+        <p>无限不是宇宙的主体：可感受的事物中没有无限，无限不能有众多（可数）组成，也不能是单体；元一亦不是。</p>
+
+
+      </div>
+
+
+
+
+      <h5 style="text-align:center;">卷十二*</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>倘若宇宙(universe)为一整体(whole),本体是其第一部分；倘宇宙是各部分的串联，则本体在次序上为第一，随后为质、量。
+          本体分可感觉本体（永恒；可灭坏）和不可感觉本体。可感觉本体是变化的，不可感觉本体不变动。本体也可分为物质本体，形式本体（自然本性），和综合实体。
+          变化分四类：本体生灭、量之增减、质的该换、位置运动。对于永恒事物，不生灭但若能运动，则必有物质。
+          原理有三：定义或通式；定义和通式的缺失；物质。物质和通式互不创生。</p>
+
+        <p>运动和时间都是延续的；时间或者就是运动，或是运动的属性。空间运动中只有圆的运动延续不息；空间运动外无延续不息的运动。</p>
+
+        <p>第一原理的要义即是实现，这是由于动的万物需要有制动而不被动的永恒事物。这本体无物质。
+          留基伯和柏拉图说宇宙常动却不说为何而动；希萧特以混动为宇宙之始，阿纳克萨哥拉的理性就是实现。
+          第一天(First heaven) 是永恒的。原动者的极因是善。</p>
+
+        <p>欲求所求为表面事物的虚善；理性所求为真实事物的真善。
+          人若无所思则与睡眠无异；人的思想活动不是至善。人的思想对象为他物，全善的神永远思想他自己。</p>
+
+        <p>秩序为善。自由人不做无目的的动作，相比牲畜的蠢蠢而动，有了更少的自由。
+          善政者不在多，一王而治(The rule of many is not good, let there be one ruler)。</p>
+
+
+      </div>
+
+
+      <h5 style="text-align:center;">卷十三</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>数理对象(object of mathematics)作为实是只在定义为先，而不先于可感觉事物，也不能再任何处所独立存在，并非全称存在(do not exist without qualification)。</p>
+
+        <p>美与善不同：善以行为主，而美可见于不动的事物。美的主要形式：秩序(order), 匀称(symmetry)，明确(definiteness)。
+          赫拉克利特(Heraclitean)将可感觉事物描写为均在流变之中;德谟克里特(Democritus)触及物质；
+          苏格拉底(Socrates)竭诚于演绎(deduction)和辩证(dialect)，
+          归纳思辨(Induction argument)与普遍定义(universal definition)归功于苏格拉底,但普遍定义尚未成功。</p>
+
+
+      </div>
+
+
+      <h5 style="text-align:center;">卷十四</h5>
+      <div style="text-indent: 2em; margin: 25px 20px 25px 20px;" >
+        <p>本体无对反。可消失的非永恒。</p>
+
+      </div>
+
+
+
+
+
+      </div>
     </div>
+    <!-- End Metaphysica -->
 
 
+
+
+
+
+
+
+<!--
+Reading Template
+  !-- start On liberty --
+    <div id="Onliberty">
+    <h3 class="w3-padding-16 w3-text-light-grey">On Liberty</h3>
+
+    --! font size--
+    <div class="a w3-row w3-padding-16 w3-section w3-light-grey" style="font-family: LiSu, Garamond, Serif">
+
+
+      <h5 style="text-align:center;">Chapter II</h5>
+      <div style="text-indent: 2em; margin: 25px 30px 25px 30px;" >
+         <p> Of the Liberty of Thoughts and Discussion.</p>
+      </div>
+
+
+      </div>
+    </div>
+  !-- End On Liberty --
+-->
+
+
+
+
+
+
+
+
+    </div>
+  <!-- End Reading Section -->
 
 
 
