--- a/reading.html
+++ b/reading.html
@@ -107,7 +107,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, Serif}
     <td>Philosopher</td>
     <td>Matter</td>
     <td>Change</td>
-    <td>One Entity</td>
+    <td>One</td>
 
   </tr>
 
