--- a/index.html
+++ b/index.html
@@ -210,10 +210,12 @@ div.hidden {
 
   <!-- Photo Section -->
   <div class="w3-padding-64 w3-content" id="fun">
-    <h2 class="w3-text-light-grey">On the road</h2>
+    <h2 class="w3-text-light-grey">
+       <a href="fun.html" style="text-decoration: none">On the road </a></h2>
     <hr style="width:200px" class="w3-opacity">
 
-    <h3 class="w3-padding-16 w3-text-light-grey">Sunsets</h3>
+    <h3 class="w3-padding-16 w3-text-light-grey">
+      <a href="fun.html#sunsets" style="text-decoration: none">Sunsets</h3>
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
