--- a/reading.html
+++ b/reading.html
@@ -64,7 +64,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, Serif}
 
 
 
-
+<div class="w3-padding-large" id="Read">
   <!-- Reading Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="reading">
     <h2 class="w3-text-light-grey">Reading and Writing</h2>
@@ -524,6 +524,9 @@ Reading Template
   <!--  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
   <!-- End footer -->
   </footer>
+
+
+</div>
 
 </body>
 </html>
