--- a/fun.html
+++ b/fun.html
@@ -66,7 +66,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
 
 
 
-
+<!-- Page Content -->
+<div class="w3-padding-large" id="Photo">
 
   <!-- Photo Section -->
   <div class="w3-padding-64 w3-content" id="fun">
@@ -75,7 +76,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
 
     <h3 class="w3-padding-16 w3-text-light-grey">Sunsets</h3>
     <!-- Grid for photos -->
-    <div class="w3-row-padding" style="margin:0 -16px">
+    <div class="w3-row-padding" style="margin:0 -16px" id="'sunsets">
       <div class="w3-half">
         <img src="Pictures/Silhouettes.jpg" style="width:100%">
       </div>
@@ -134,6 +135,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
 
 
 
+
+</div>
 
 </body>
 </html>
