--- a/reading.html
+++ b/reading.html
@@ -20,7 +20,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, Serif}
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
 #Read {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
-@media only screen and (max-width: 600px) {#main {margin-left: 0}}
+@media only screen and (max-width: 600px) {#Read {margin-left: 0}}
 </style>
 <body class="w3-black">
 
