--- a/fun.html
+++ b/fun.html
@@ -160,7 +160,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
           巨型支架在临近舞会结束时被搬上舞台，演员们各执一根彩带围着支架转圈成旋转木马，很是绚丽。
           一位黑人女舞者在王子朋友三人群舞中很惊艳，有力量感又不失柔美。</p>
         <p>导师Wolfgang和魔王Rothbart不是同一个人，存在感都很弱，没有导师和王子的对舞。
-        第一次天鹅湖音乐出现的时候是王子朋友Benno递弩给王子接着他们去狩猎。</p>
+        第儿次天鹅湖序曲出现的时候是王子朋友Benno递弩给王子接着他们去狩猎。</p>
         </div>
 
         <h4 style="text-align:center;">Act 2</h4>
