--- a/fun.html
+++ b/fun.html
@@ -136,7 +136,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", LiSu, sans-serif}
             <ul>
                 <li><a href="Files/WashingtonBallet_SwanLake_Feb2022.pdf">The Washington Ballet-Swan Lake</a></li>
                 <li><a href="https://www.bilibili.com/video/BV1nx411Q7dx" style="text-decoration: none">
-            Bilibili:巴黎歌剧院2006-努里耶夫版</a> </li>
+            巴黎歌剧院2006-努里耶夫版</a> </li>
                <li>Feb 9th 2022, 8 PM, Kennedy Center</li>
                 </ul>
           </div>
